--- a/blogapp/pubspec.yaml
+++ b/blogapp/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   shared_preferences: ^0.5.8
-  flutter_login: ^1.0.14
   http: ^0.12.0+4
 
 dev_dependencies:
@@ -47,7 +46,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - images/joker.jpg
+    - images/joker.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -71,6 +70,14 @@ flutter:
           weight: 600
         - asset: fonts/lucidasans/lucidasansdemibold.ttf
           weight: 700
+    - family: Comicsans
+      fonts:
+        - asset: fonts/comicsans/comici.ttf
+        - asset: fonts/comicsans/comici.ttf
+          style: italic
+        - asset: fonts/comicsans/comicz.ttf
+          weight: 700
+        - asset: fonts/comicsans/design.graffiti.comicsansms.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
