--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongodb": "^3.6.9",
     "mongoose": "^5.10.6"
   }
 }
